Fix layout issues in IE

--- a/src/components/TwitterTweet/styles.module.scss
+++ b/src/components/TwitterTweet/styles.module.scss
@@ -4,7 +4,7 @@
   margin: 20px auto;
 }
 
-.error-wrapper {
+blockquote.error-wrapper {
   padding: 10px 15px;
   margin: 20px auto;
 }
